public/src/stylesheets/app/_overrides.scss
.moj-sub-navigation__link {
  @extend .govuk-link--no-visited-state;
}

.pac-\!-no-underline {
  text-decoration: none;
}

.govuk-phase-banner {
  border: none;
}

.govuk-table.pac-table--no-borders {
  th, td {
    border: 0;
    padding: 5px 20px;
  }
}

.pac-accordion-section-heading {
  @extend .govuk-\!-font-size-19;
}

.pac-\!-border-left {
  border-left: 2px solid govuk-colour("mid-grey");
}

.pac-\!-grid-column-45 {
  width: 45%;
}

.pac-\!-grid-column-sticky-45 {
  width: 45%;
  padding: 10px 0;
  position: sticky;
  top: 20px;
  overflow: auto;
  position: sticky;
}

.pac-\!-grid-column--max-700 {
  max-width: 700px;
}

.pac-header-tag {
  margin-top: -3px;
}

.pac-\!-grid-column-55 {
  width: 55%;
}

.pac-\!-grid-column-18 {
  width: 18%;
}

pac-\!-width-40 {
  width: 40%;
}

pac-\!-valign-bottom {
  vertical-align: bottom;
}

.pac-inline-header-banner {
  line-height: 0.25;
}

.pac-hide--mobile {
  @include govuk-media-query($until: tablet) {
    display: none;
  }
}

.autocomplete__option {
  @extend .govuk-body;
  margin: 0;
}

body.js-enabled {
  .moj-js-hidden {
    @include govuk-visually-hidden;
  }
}

mark {
  border-bottom: 2px solid #ffbf47;
  background-color: #fff2d3;
  padding: 0;
}

